fix position of Collapse optional information

--- a/src/app/upload-modal/upload-modal.component.css
+++ b/src/app/upload-modal/upload-modal.component.css
@@ -1349,7 +1349,7 @@ input.copyright-input::placeholder{
   margin-top: 0px;
 }
 .collapseInformationLink {
-  margin-top: 140px;
+  margin-top: 214px;
 }
 .optionalInformationDate ::ng-deep .ng-select.ng-select-single .ng-select-container .ng-value-container .ng-input {
   display: none !important;
